<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/download_msg"
        android:layout_marginBottom="@dimen/button_margin"/>

    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <EditText
            android:id="@+id/edit_text_pdf1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/pdf_file_1"/>

    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <EditText
            android:id="@+id/edit_text_pdf2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/pdf_file_2"/>

    </android.support.design.widget.TextInputLayout>


    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <EditText
            android:id="@+id/edit_text_pdf3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/pdf_file_3"/>

    </android.support.design.widget.TextInputLayout>


    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <EditText
            android:id="@+id/edit_text_pdf4"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/pdf_file_4"/>

    </android.support.design.widget.TextInputLayout>


    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <EditText
            android:id="@+id/edit_text_pdf5"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/pdf_file_5"/>

    </android.support.design.widget.TextInputLayout>


    <Button
        android:id="@+id/btn_download_files"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/start_download"
        android:layout_margin="@dimen/button_margin"
        android:background="@color/colorPrimaryDark" />

</LinearLayout>