<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".activity.MainActivity">

    <TextView
        android:id="@+id/text_main_desc"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/main_exp" />

    <Button
        android:id="@+id/btn_download"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/pdf_download"
        android:layout_margin="@dimen/button_margin"
        android:background="@color/colorPrimaryDark"
        android:layout_below="@id/text_main_desc"/>

    <Button
        android:id="@+id/btn_close"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/close"
        android:layout_margin="@dimen/button_margin"
        android:background="@color/colorPrimaryDark"
        android:layout_alignParentBottom="true"/>

</RelativeLayout>
